# geomagic_touch

./: .gitignore
geomagic_control/: CMakeLists.txt  README.md  package.xml
geomagic_control/launch/: geomagic.launch  geomagic_headless.launch
geomagic_control/src/: omni.cpp
