<?xml version="1.0"?>
<package format="2">
  <name>tapi_geomagic_control</name>
  <version>1.1.0</version>
  <description>ROS Node for Geomagic devices.</description>
  <maintainer email="sb@generationrobots.com">Sven Bock</maintainer>
  <maintainer email="tobby@tobby.eu">tobby</maintainer>
  <author>Hai Nguyen, Marc Killpack, Chi-Hung King, Advisor: Prof. Charlie Kemp, Lab: Healthcare Robotics Lab at Georgia Tech</author>
  <author email="tobby@tobby.eu">tobby</author>
  <license>new BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>openhaptics-ae</build_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tapi_lib</depend>
  <depend>tf</depend>
  <depend>urdf</depend>

  <exec_depend>geomagic_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>


